--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Realizando cópia da Netflix",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "keywords": [],
   "author": "João Augusto",
