Upload das capas dos cursos

--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,10 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
 jspm_packages/
-uploads/*
+node_modules
+uploads/videos
+public/thumbnails
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
